<resources>
    <string name="app_name">Firebase Authentication</string>

    <string name="label_google_sign_in" translatable="false">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in" translatable="false">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login" translatable="false">Firebase + Facebook Login</string>
    <string name="desc_facebook_login" translatable="false">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login" translatable="false">Firebase + Twitter Login</string>
    <string name="desc_twitter_login" translatable="false">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword" translatable="false">Email/Password Authentication</string>
    <string name="desc_emailpassword" translatable="false">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless" translatable="false">Passwordless Authentication</string>
    <string name="desc_passwordless" translatable="false">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth" translatable="false">Phone Number Authentication</string>
    <string name="desc_phone_auth" translatable="false">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth" translatable="false">Anonymous Authentication</string>
    <string name="desc_anonymous_auth" translatable="false">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth" translatable="false">Custom Authentication</string>
    <string name="desc_custom_auth" translatable="false">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui" translatable="false">FirebaseUI Auth</string>
    <string name="desc_firebase_ui" translatable="false">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found" translatable="false">Link received, enter email to sign in.</string>

    <string name="phone_title_text" translatable="false">Phone Number</string>

    <string name="twitter_status_fmt" translatable="false">Twitter User: %s</string>
    <string name="twitter_title_text" translatable="false">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text" translatable="false">FirebaseUI Auth</string>

    <string name="id_fmt" translatable="false">User ID: %s</string>
    <string name="email_fmt" translatable="false">Email: %s</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="no_account_yet_create_one" translatable="false">no account yet create one</string>
    <string name="email">email</string>


    <string name="nameKri">krisorn</string>
    <string name="lastNameKri">kachai</string>
    <string name="phoneNumberKri">0802282472</string>
    <string name="mailKri">24433@ppk.ac.th</string>
    <string name="facutyKri">faculty of engineering</string>
    <string name="universityKri">chiangmai university</string>

    <string name="nameGod">chawalid</string>
    <string name="lastNameGod">punyacharean</string>
    <string name="phoneNumberGod">0805574878</string>
    <string name="mailGod">chawalid_punyacharean</string>
    <string name="facutyGod">faculty of engineering</string>
    <string name="universityGod">chiangmai university</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="total">Total:</string>

    <color name="colorPrimary">#004d40</color>
    <color name="colorPrimaryDark">#00251a</color>
    <color name="colorAccent">#39796b</color>
    <color name="overlayoutBackground">#7f333639</color>
    <color name="overlayActionBar">#0e0d0e</color>
    <string name="title_activity_home">home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
</resources>
